[project]
name = "network-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "osmium>=4.0.2",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "shapely>=2.0.7",
    "simpy>=4.1.1",
]
